--- a/definitions/EiffelTestExecutionRecipeCollectionCreatedEvent/4.1.1.yml
+++ b/definitions/EiffelTestExecutionRecipeCollectionCreatedEvent/4.1.1.yml
@@ -91,7 +91,7 @@ properties:
                     _description: A UUID identifying the unique execution.
                       Note that this is different from the id of a
                       test case, in two ways. First, a test case is
-                      a (presumably) persistnent entity, whereas an
+                      a (presumably) persistent entity, whereas an
                       execution is transient in nature. Second, a test
                       case may be executed any number of times in any
                       given recipe collection.
