--- a/tox.ini
+++ b/tox.ini
@@ -14,12 +14,17 @@
 # limitations under the License.
 
 [tox]
-envlist = validate
+envlist = validate, black
 skip_missing_interpreters = True
 skipsdist = True
 
 [testenv]
 basepython = python3
+
+[testenv:black]
+deps =
+     black==21.12b0
+commands = black --check --diff .
 
 [testenv:validate]
 deps = -rrequirements.txt
