--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,7 @@
 # limitations under the License.
 
 [tox]
-envlist = validate, black
+envlist = flake8, validate, black
 skip_missing_interpreters = True
 skipsdist = True
 
@@ -26,6 +26,17 @@ deps =
      black==21.12b0
 commands = black --check --diff .
 
+[testenv:flake8]
+deps =
+    flake8==4.0.1
+commands = flake8
+
 [testenv:validate]
 deps = -rrequirements.txt
 commands = python3 examples/validate.py
+
+[flake8]
+# Ignore a few formatting aspects that we let Black take care of.
+ignore =
+    E501
+    W503
