--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,7 @@
 # limitations under the License.
 
 [tox]
-envlist = flake8, validate, black
+envlist = flake8, validate, black, isort
 skip_missing_interpreters = True
 skipsdist = True
 
@@ -31,6 +31,11 @@ deps =
     flake8==4.0.1
 commands = flake8
 
+[testenv:isort]
+deps =
+    isort==5.10.1
+commands = isort --check-only --diff .
+
 [testenv:validate]
 deps = -rrequirements.txt
 commands = python3 examples/validate.py
@@ -40,3 +45,7 @@ commands = python3 examples/validate.py
 ignore =
     E501
     W503
+
+[isort]
+atomic = True
+force_single_line = True
