Run Black, flake8, and isort via tox.ini (#294)
We add three commonly used linters and code formatters; Black, flake8, 
and isort. Together they make sure all Python code is consistently
formatted and has a reasonably consistent style in other aspects. All
code has been adjusted to satisfy these programs.

Of the flake8 corrections made, one was a rather subtle shadowing of
the json module import in a loop variable. The variable was renamed
to better describe what it contains.

--- a/tox.ini
+++ b/tox.ini
@@ -14,13 +14,38 @@
 # limitations under the License.
 
 [tox]
-envlist = validate
+envlist = flake8, validate, black, isort
 skip_missing_interpreters = True
 skipsdist = True
 
 [testenv]
 basepython = python3
 
+[testenv:black]
+deps =
+     black==21.12b0
+commands = black --check --diff .
+
+[testenv:flake8]
+deps =
+    flake8==4.0.1
+commands = flake8
+
+[testenv:isort]
+deps =
+    isort==5.10.1
+commands = isort --check-only --diff .
+
 [testenv:validate]
 deps = -rrequirements.txt
 commands = python3 examples/validate.py
+
+[flake8]
+# Ignore a few formatting aspects that we let Black take care of.
+ignore =
+    E501
+    W503
+
+[isort]
+atomic = True
+force_single_line = True
