--- a/tox.ini
+++ b/tox.ini
@@ -28,7 +28,7 @@ basepython = python3
 
 [testenv:black]
 deps =
-     black==21.12b0
+     black==22.6.0
 commands = black --check --diff .
 
 [testenv:flake8]
