Add makefile and invoke it from GH Action workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,3 +31,21 @@ jobs:
 
       - name: Run tox
         run: tox
+
+  check-consistency:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Install dependencies
+        run: pip install -r requirements.txt
+
+      - name: Generate all files
+        run: make
+
+      - name: Check if workspace contains dirty files
+        run: git diff --exit-code || ( echo "::error ::Workspace contained dirty files (see log for details)" ; exit 1)
+
+      - name: Check if workspace contains uncommitted files
+        run: export FILES="$(git ls-files -o --exclude-standard)" ; test -z "$FILES" || ( echo "$FILES" ; echo "::error ::Workspace contained uncommitted files (see log for details)" ; exit 1 )
