Add MARKDOWN_CONFIG_FILE env

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -51,3 +51,4 @@ jobs:
           VALIDATE_ALL_CODEBASE: true
           DEFAULT_BRANCH: master
           VALIDATE_MARKDOWN: true
+          MARKDOWN_CONFIG_FILE: .markdown-lint.yml
