Add github token and tried lint rule by id

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -52,3 +52,5 @@ jobs:
           DEFAULT_BRANCH: master
           VALIDATE_MARKDOWN: true
           MARKDOWN_CONFIG_FILE: .markdown-lint.yml
+          # Please set a [GITHUB_TOKEN] from the main workflow environment to take advantage of multiple status reports!
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
