--- a/definitions/EiffelActivityTriggeredEvent/4.2.0.yml
+++ b/definitions/EiffelActivityTriggeredEvent/4.2.0.yml
@@ -142,7 +142,7 @@ _links:
         - EiffelActivityTriggeredEvent
 _history:
   - version: 4.2.0
-    introduced_in: 'No edition set'
+    introduced_in: '[edition-arica](../../../tree/edition-arica)'
     changes: Add schema URL to the meta object (see [Issue 280](https://github.com/eiffel-community/eiffel/issues/280)).
   - version: 4.1.0
     introduced_in: '[edition-lyon](../../../tree/edition-lyon)'
