--- a/definitions/EiffelArtifactCreatedEvent/3.3.0.yml
+++ b/definitions/EiffelArtifactCreatedEvent/3.3.0.yml
@@ -213,7 +213,7 @@ _links:
         - EiffelArtifactCreatedEvent
 _history:
   - version: 3.3.0
-    introduced_in: No edition set
+    introduced_in: '[edition-arica](../../../tree/edition-arica)'
     changes: Added data.fileInformation.integrityProtection member (see [Issue 290](https://github.com/eiffel-community/eiffel/issues/290)).
   - version: 3.2.0
     introduced_in: 'No edition set'
