Add test that verifies history tables entries
It's easy to forget to add an entry in the history table when you copy
an existing event definition file. We therefore add a Python test file
with a short test that verifies that each event definition has a
corresponding history table entry.

The new test exposed to definition files without history tables so we
had to correct them too.

--- a/definitions/EiffelTestCaseFinishedEvent/1.0.0.yml
+++ b/definitions/EiffelTestCaseFinishedEvent/1.0.0.yml
@@ -118,5 +118,8 @@ required:
   - links
 additionalProperties: false
 _links: {}
-_history: []
+_history:
+  - version: 1.0.0
+    introduced_in: '[edition-bordeaux](../../../tree/edition-bordeaux)'
+    changes: Initial version.
 _examples: []
