--- a/definitions/EiffelTestCaseTriggeredEvent/3.3.0.yml
+++ b/definitions/EiffelTestCaseTriggeredEvent/3.3.0.yml
@@ -188,6 +188,9 @@ _links:
       types:
         - EiffelTestCaseTriggeredEvent
 _history:
+  - version: 3.3.0
+    introduced_in: Current version
+    changes: Add SCS and SCC as legal target for IUT in TCT (see [Issue 317](https://github.com/eiffel-community/eiffel/issues/317)).
   - version: 3.2.0
     introduced_in: '[edition-arica](../../../tree/edition-arica)'
     changes: Add schema URL to the meta object (see [Issue 280](https://github.com/eiffel-community/eiffel/issues/280)).
