Add event_manifest.yml and a script to regenerate it
This new file lists all available editions, what event types are
available in each, and the latest available version of each event
type in each edition. This is useful for automation and SDK
generation.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-# Copyright 2022 Axis Communications AB.
+# Copyright 2022-2023 Axis Communications AB.
 # For a full list of individual contributors, please see the commit history.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -37,6 +37,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+        with:
+          # We need to fetch the tags too.
+          fetch-depth: 0
 
       - name: Install dependencies
         run: pip install -r requirements.txt
