--- a/definitions/EiffelActivityTriggeredEvent/4.3.0.yml
+++ b/definitions/EiffelActivityTriggeredEvent/4.3.0.yml
@@ -154,6 +154,7 @@ _links:
         - EiffelActivityTriggeredEvent
 _history:
   - version: 4.3.0
+    introduced_in: edition-orizaba
     changes: Add ORIGINAL_TRIGGER link (see [Issue 246](https://github.com/eiffel-community/eiffel/issues/246)).
   - version: 4.2.0
     introduced_in: edition-arica
