--- a/definitions/EiffelArtifactDeployedEvent/0.1.0.yml
+++ b/definitions/EiffelArtifactDeployedEvent/0.1.0.yml
@@ -113,6 +113,7 @@ _links:
         - EiffelFlowContextDefinedEvent
 _history:
   - version: 0.1.0
+    introduced_in: edition-orizaba
     changes: Initial version.
 _examples:
   - title: Simple example
