--- a/definitions/EiffelTestCaseTriggeredEvent/3.3.0.yml
+++ b/definitions/EiffelTestCaseTriggeredEvent/3.3.0.yml
@@ -189,6 +189,7 @@ _links:
         - EiffelTestCaseTriggeredEvent
 _history:
   - version: 3.3.0
+    introduced_in: edition-orizaba
     changes: Add SCS and SCC as legal target for IUT in TCT (see [Issue 317](https://github.com/eiffel-community/eiffel/issues/317)).
   - version: 3.2.0
     introduced_in: edition-arica
