Say "previous activity" instead of "latter" to be unambiguous
Co-authored-by: Emil Bäckmark <emil.backmark@ericsson.com>

--- a/definitions/EiffelActivityTriggeredEvent/4.3.0.yml
+++ b/definitions/EiffelActivityTriggeredEvent/4.3.0.yml
@@ -128,7 +128,7 @@ _links:
         - EiffelFlowContextDefinedEvent
   ORIGINAL_TRIGGER:
     description: 'Used when the current activity is a new attempt at
-      completing a previous activity, typically because the latter failed.
+      completing a previous activity, typically because the previous activity failed.
       Although this activity may have been manually triggered and thus
       lacks a cause that can be described with Eiffel, this link can be
       used to convey the second-order cause.'
