--- a/definitions/EiffelTestSuiteStartedEvent/3.4.0.yml
+++ b/definitions/EiffelTestSuiteStartedEvent/3.4.0.yml
@@ -182,6 +182,8 @@ _links:
       types:
         - EiffelTestExecutionRecipeCollectionCreatedEvent
 _history:
+  - version: 3.4.0
+    changes: Add ORIGINAL_TRIGGER link (see [Issue 246](https://github.com/eiffel-community/eiffel/issues/246)).
   - version: 3.3.0
     introduced_in: edition-arica
     changes: Add schema URL to the meta object (see [Issue 280](https://github.com/eiffel-community/eiffel/issues/280)).
