--- a/definitions/EiffelIssueVerifiedEvent/4.3.1.yml
+++ b/definitions/EiffelIssueVerifiedEvent/4.3.1.yml
@@ -129,6 +129,8 @@ _links:
         - EiffelTestCaseFinishedEvent
         - EiffelTestSuiteFinishedEvent
 _history:
+  - version: 4.3.1
+    changes: Change IUT to Implementation Under Test (see [Issue 235](https://github.com/eiffel-community/eiffel/issues/359)).
   - version: 4.3.0
     introduced_in: edition-orizaba
     changes: Add artifact deployed event as legal IUT target (see [Issue 239](https://github.com/eiffel-community/eiffel/issues/239)).
