--- a/definitions/EiffelTestExecutionRecipeCollectionCreatedEvent/4.3.1.yml
+++ b/definitions/EiffelTestExecutionRecipeCollectionCreatedEvent/4.3.1.yml
@@ -237,6 +237,8 @@ _links:
       types:
         - EiffelFlowContextDefinedEvent
 _history:
+  - version: 4.3.1
+    changes: Change IUT to Implementation Under Test (see [Issue 235](https://github.com/eiffel-community/eiffel/issues/359)).
   - version: 4.3.0
     introduced_in: edition-arica
     changes: Add schema URL to the meta object (see [Issue 280](https://github.com/eiffel-community/eiffel/issues/280)).
