--- a/tox.ini
+++ b/tox.ini
@@ -20,6 +20,7 @@ envlist =
     black
     isort
     jsonformat
+    lint
 skip_missing_interpreters = True
 skipsdist = True
 
@@ -59,3 +60,11 @@ ignore =
 [isort]
 atomic = True
 force_single_line = True
+
+[testenv:lint]
+description = Lint Markdown documents following the rules set forth here: https://github.com/DavidAnson/markdownlint/blob/main/doc/Rules.md
+changedir = {toxinidir}
+allowlist_externals =
+    npx
+commands =
+    npx markdownlint-cli -c .markdown-lint.yml *.md **/*.md
