--- a/definitions/EiffelTestSuiteStartedEvent/3.0.0.yml
+++ b/definitions/EiffelTestSuiteStartedEvent/3.0.0.yml
@@ -147,7 +147,7 @@ _history:
     introduced_in: edition-agen
     changes: Improved information integrity protection
   - version: 2.0.0
-    introduced_in: edition-lyon
+    introduced_in: edition-agen
     changes: Introduced purl identifiers instead of GAVs (see [Issue
       182](https://github.com/eiffel-community/eiffel/issues/182))
   - version: 1.1.0
