Call the target markdownlint

--- a/tox.ini
+++ b/tox.ini
@@ -21,7 +21,7 @@ envlist =
     isort
     jsonformat
     pytest
-    lint
+    markdownlint
 
 skip_missing_interpreters = True
 skipsdist = True
@@ -73,7 +73,7 @@ ignore =
 atomic = True
 force_single_line = True
 
-[testenv:lint]
+[testenv:markdownlint]
 description = Lint Markdown documents following the rules set forth here: https://github.com/DavidAnson/markdownlint/blob/main/doc/Rules.md
 changedir = {toxinidir}
 allowlist_externals =
