Add linting for markdown files (#304)

--- a/tox.ini
+++ b/tox.ini
@@ -1,4 +1,4 @@
-# Copyright 2022 Axis Communications AB.
+# Copyright 2022-2023 Axis Communications AB and others.
 # For a full list of individual contributors, please see the commit history.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -21,6 +21,8 @@ envlist =
     isort
     jsonformat
     pytest
+    markdownlint
+
 skip_missing_interpreters = True
 skipsdist = True
 
@@ -70,3 +72,11 @@ ignore =
 [isort]
 atomic = True
 force_single_line = True
+
+[testenv:markdownlint]
+description = Lint Markdown documents following the rules set forth here: https://github.com/DavidAnson/markdownlint/blob/main/doc/Rules.md
+changedir = {toxinidir}
+allowlist_externals =
+    npx
+commands =
+    npx markdownlint-cli -c .markdown-lint.yml *.md **/*.md
