Add test for valid schema

--- a/tox.ini
+++ b/tox.ini
@@ -20,6 +20,7 @@ envlist =
     black
     isort
     jsonformat
+    jsonschema
     pytest
     markdownlint
 
@@ -48,6 +49,12 @@ commands = isort --check-only --diff .
 deps =
     pytest==6.2.5
 commands = pytest test_jsonformat.py {posargs}
+
+[testenv:jsonschema]
+deps =
+    pytest==6.2.5
+    jsonschema==4.20.0
+commands = pytest test_jsonschema.py {posargs}
 
 [testenv:pytest]
 deps =
