--- a/definitions/EiffelActivityCanceledEvent/3.0.0.yml
+++ b/definitions/EiffelActivityCanceledEvent/3.0.0.yml
@@ -44,7 +44,7 @@ required:
   - meta
   - data
   - links
-additonalProperties: false
+additionalProperties: false
 _links:
   ACTIVITY_EXECUTION:
     description: Declares the activity execution that was canceled.
