Lock version of markdownlint-cli and fix violations
markdownlint-cli was using a floating version, and since this
linter was introduced additional rules have been added so now
the linting fails on the master branch. Lock the version to
the currently latest version and disable the rule that we
didn't comply with (since addressing it properly would be
rather intrusive).

--- a/.markdown-lint.yml
+++ b/.markdown-lint.yml
@@ -30,6 +30,10 @@
 # Rules by tags #
 #################
 
+# First line in a file being a top-level heading collides with starting
+# each file with a copyright statement.
+first-line-h1: false
+
 # MD013/line-length - Line length
 line-length:
     line_length: 900 # Arbitrary length to catch the worst. Setting this to 120 affects 500 lines
