--- a/tox.ini
+++ b/tox.ini
@@ -79,4 +79,4 @@ changedir = {toxinidir}
 allowlist_externals =
     npx
 commands =
-    npx markdownlint-cli -c .markdown-lint.yml *.md **/*.md
+    npx markdownlint-cli@v0.34.0 -c .markdown-lint.yml *.md **/*.md
