--- a/.markdown-lint.yml
+++ b/.markdown-lint.yml
@@ -30,9 +30,10 @@
 # Rules by tags #
 #################
 
+# MD041/first-line-heading/first-line-h1
 # First line in a file being a top-level heading collides with starting
 # each file with a copyright statement.
-first-line-h1: false
+first-line-h1: false # Affects 45 files
 
 # MD013/line-length - Line length
 line-length:
