--- a/definitions/EiffelArtifactCreatedEvent/4.0.0.yml
+++ b/definitions/EiffelArtifactCreatedEvent/4.0.0.yml
@@ -55,34 +55,7 @@ properties:
               items:
                 type: string
             integrityProtection:
-              _description: An optional object containing a digest of
-                the file's contents, i.e. a checksum, computed using
-                the specified algorithm.
-              type: object
-              properties:
-                alg:
-                  _description: The cryptographic algorithm used to compute
-                    the digest of the file's contents.
-                  _format: One of the hash algorithms listed in section 1 of
-                    [NIST FIPS 180-4](https://nvlpubs.nist.gov/nistpubs/FIPS/NIST.FIPS.180-4.pdf),
-                    excluding "SHA-1".
-                  type: string
-                  enum:
-                    - SHA-224
-                    - SHA-256
-                    - SHA-384
-                    - SHA-512
-                    - SHA-512/224
-                    - SHA-512/256
-                digest:
-                  _description: The digest of the file contents.
-                  _format: A lowercase string of hexadecimal digits.
-                  type: string
-                  pattern: ^[0-9a-f]+$
-              required:
-                - alg
-                - digest
-              additionalProperties: false
+              $ref: ../EiffelIntegrityProtection/1.0.0.yml
           required:
             - name
           additionalProperties: false
