--- a/definitions/EiffelTestCaseFinishedEvent/4.1.0.yml
+++ b/definitions/EiffelTestCaseFinishedEvent/4.1.0.yml
@@ -90,7 +90,7 @@ properties:
           - conclusion
         additionalProperties: false
       persistentLogs:
-        $ref: ../EiffelPersistentLogs/1.0.0.yml
+        $ref: ../EiffelPersistentLogsProperty/1.0.0.yml
       customData:
         type: array
         items:
