--- a/definitions/EiffelTestSuiteFinishedEvent/4.1.0.yml
+++ b/definitions/EiffelTestSuiteFinishedEvent/4.1.0.yml
@@ -64,7 +64,7 @@ properties:
             type: string
         additionalProperties: false
       persistentLogs:
-        $ref: ../EiffelPersistentLogs/1.0.0.yml
+        $ref: ../EiffelPersistentLogsProperty/1.0.0.yml
       customData:
         type: array
         items:
